# opaque

./: .gitignore  .prettierignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  api-proposal.ts  build.sh  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rollup.config.js  tsconfig.json  vitest.config.ts
.changeset/: config.json  dull-dolphins-add.md  eight-mails-hide.md  fix-wasm-bindgen-deprecation.md  little-forks-chew.md  loud-gifts-tap.md  metal-insects-look.md  quick-donkeys-appear.md  update-rfc-references.md
.claude/: settings.local.json
.github/workflows/: bump-version.yml  example-e2e-tests.yml  lint-and-format.yml  release.yml  tests.yml
example/: index.html  index.js  package-lock.json  package.json  webpack.config.js
example-client/: index.js  package.json  playwright.config.ts  simple_login.js
example-client/tests/: full-flow.e2e.ts
example-node/: main.js  package.json  pnpm-lock.yaml
example-server/: client.js  package.json  server.js
example-server/src/: database.js  server.js
example/.bin/: create-wasm-app.js
examples/client-simple/: index.html  index.js  playwright.config.ts
examples/client-simple-nextjs/app/: page.tsx
examples/client-simple-opaque-react/: index.html  package.json
examples/client-simple-opaque-react/src/: App.tsx  Button.tsx  Login.tsx  (+3 more)
examples/client-simple-vite/: index.html  main.js  package.json  vite.config.js
examples/client-simple-webpack/: global.d.ts  index.html  index.js  package.json  playwright.config.ts  webpack.config.js
examples/client-with-password-reset/: index.html  index.js  package.json  playwright.config.ts  pnpm-lock.yaml  webpack.config.js
examples/fullstack-e2e-encrypted-locker-nextjs/: .gitignore  jest.config.js  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts
examples/fullstack-simple-nextjs/: .gitignore  package-lock.json  package.json
examples/server-simple/: package.json  pnpm-lock.yaml
examples/server-simple-opaque-express/: package.json
examples/server-with-password-reset/: package.json
examples/vite-simple/: index.html  main.js  package.json  vite.config.js
opaque-express/: index.js  package.json
src/: lib.rs
tests/: opaque.test.js
(+156 files in other folders)
