[package]
name = "opaque"
version = "0.2.0"
authors = ["Stefan Oestreicher <oestef@gmail.com>", "Nik Graf <nik@nikgraf.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
p256 = ["dep:p256"]

[dependencies]
wasm-bindgen = { version = "0.2.84", features = ["serde-serialize"] }
opaque-ke = { version = "3.0.0-pre.2", features = ["argon2"] }
rand = { version = "0.8.5" }
getrandom = { version = "0.2.8", features = ["js", "wasm-bindgen"] }
argon2 = "0.5"
p256 = { version = "0.13", default-features = false, features = ["hash2curve", "voprf"], optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4.5", optional = true }
base64 = "0.21.0"
serde = { version = "1.0.159", features = ["derive"] }
serde-wasm-bindgen = "0.5.0"
tsify = { git = "https://github.com/serenity-kit/tsify.git", branch = "throw-with-serde-error-message", features = ["js"] }
js-sys = "0.3.61"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
